--- a/src/index.css
+++ b/src/index.css
@@ -97,14 +97,14 @@ body {
   width: 199px !important;
 }
 .w-40 {
-  max-width: 40px !important;
+  width: 40px !important;
 }
 .w-max-content {
   width: max-content !important;
 }
-.w-h-373 {
-  max-width: 373px !important;
-  max-height: 373px !important;
+.w-h-353 {
+  max-width: 353px !important;
+  max-height: 353px !important;
 }
 
 .h-40 {
@@ -112,6 +112,9 @@ body {
 }
 .fs-60 {
   font-size: 60px !important;
+}
+.fs-50 {
+  font-size: 50px !important;
 }
 .fw-500 {
   font-weight: 500 !important;
@@ -202,9 +205,15 @@ button:hover {
   .fs-60 {
     font-size: 30px !important;
   }
+  .fs-50 {
+    font-size: 30px !important;
+  }
 }
 @media (max-width: 768px) {
   .fs-60 {
+    font-size: 20px !important;
+  }
+  .fs-50 {
     font-size: 20px !important;
   }
 }
